--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,15 +10,19 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t changsathien/flask-app:latest .
+      - docker build -t flask-app:latest .
       - echo Scanning the Docker image for vulnerabilities...
-      - ./trivy image --exit-code 1 --severity HIGH,CRITICAL changsathien/flask-app
+      - ./trivy image --exit-code 1 --severity HIGH,CRITICAL flask-app:latest
   post_build:
     commands:
       - echo Pushing the Docker image to Amazon ECR...
-      - docker tag changsathien/flask-app 565393038404.dkr.ecr.us-east-1.amazonaws.com/changsathien/flask-app:latest
-      - docker push 565393038404.dkr.ecr.us-east-1.amazonaws.com/changsathien/flask-app:latest
+      - docker tag changsathien/flask-app 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest
+      - docker push 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest
       - echo Writing image definitions file...
-      - printf '[{"name":"flask-app","imageUri":"%s"}]' 565393038404.dkr.ecr.us-east-1.amazonaws.com/changsathien/flask-app > imagedefinitions.json
+      - printf '[{"name":"flask-app","imageUri":"%s"}]' 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest > imagedefinitions.json
 artifacts:
-  files: imagedefinitions.json
+  files: 
+  - imagedefinitions.json
+  - app.py
+  - Dockerfile
+  - requirements.txt
