--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t flask-app:latest .
+      - docker build -t flask-app .
       - echo Scanning the Docker image for vulnerabilities...
       - ./trivy image --exit-code 1 --severity HIGH,CRITICAL flask-app:latest
   post_build:
