--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - echo Pushing the Docker image to Amazon ECR...
       - docker tag flask-app:latest 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest
-      - docker push 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest
+      - docker push 565393038404.dkr.ecr.us-east-1.amazonaws.com/changsathien/flask-app
       - echo Writing image definitions file...
       - printf '[{"name":"flask-app","imageUri":"%s"}]' 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest > imagedefinitions.json
 artifacts:
