--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,14 +10,14 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t flask-app .
+      - docker build -t changsathien-app .
       - echo Scanning the Docker image for vulnerabilities...
-      - ./trivy image --exit-code 1 --severity HIGH,CRITICAL flask-app:latest
+      - ./trivy image --exit-code 1 --severity HIGH,CRITICAL changsathien-app:latest
   post_build:
     commands:
       - echo Pushing the Docker image to Amazon ECR...
-      - docker tag flask-app:latest 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest
-      - docker push 565393038404.dkr.ecr.us-east-1.amazonaws.com/changsathien/flask-app
+      - docker tag changsathien-app:latest 565393038404.dkr.ecr.us-east-1.amazonaws.com/changsathien/changsathien-app
+      - docker push 565393038404.dkr.ecr.us-east-1.amazonaws.com/changsathien/changsathien-app
       - echo Writing image definitions file...
       - printf '[{"name":"flask-app","imageUri":"%s"}]' 565393038404.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest > imagedefinitions.json
 artifacts:
